# zangband

CVSROOT/: loginfo  (+2 more)
zangband/: angdos.cfg  bootstrap  configure.in  makefile.in  z_faq.txt  z_update.txt
zangband/lib/: makefile.zb  tcl-version.txt
zangband/lib/apex/: makefile.zb
zangband/lib/bone/: makefile.zb
zangband/lib/data/: makefile.zb
zangband/lib/edit/: a_info.txt  e_info.txt  f_info.txt  k_info.txt  makefile.zb  misc.txt  q0000001.txt  q0000002.txt  q0000005.txt  q0000006.txt  q0000019.txt  q0000021.txt  q0000023.txt  q0000027.txt  q00000ms.txt  q000chao.txt  q000dekn.txt  q000lyeh.txt  q000natu.txt  q0thief1.txt  q0thief2.txt  q0willow.txt  q_info.txt  q_oberon.txt  q_random.txt  r_info.txt  t0000001.txt  t0000002.txt  t0000003.txt  t0000004.txt  t_basic.txt  t_info.txt  t_lite.txt  t_pref.txt  v_info.txt  w_info.txt
zangband/lib/file/: death.txt  makefile.zb  mondeath.txt  monfear.txt  monfrien.txt  monspeak.txt  news.txt  rumors.txt  silly.txt  timefun.txt
zangband/lib/help/: attack.hlp  attack.txt  birth.hlp  birth.txt  bldg.txt  charattr.hlp  charattr.txt  command.hlp  command.txt  commdesc.txt  defend.txt  dungeon.hlp  dungeon.txt  general.hlp  general.txt  help.hlp  helpinfo.txt  magic.hlp  magic.txt  makefile.zb  monster.hlp  monster.txt  objects.hlp  objects.txt  option.hlp  option.txt  pref.txt  readme.txt  spoiler.hlp  tang.txt  town.hlp  town.txt  version.txt  wizard.txt
zangband/lib/info/: makefile.zb
zangband/lib/pref/: font-ibm.prf  font-w2k.prf  font.prf  graf-dvg.prf  graf-ibm.prf  graf-mac.prf  graf-new.prf  graf-win.prf  graf-x11.prf  graf-xaw.prf  graf-xpj.prf  graf-xxx.prf  graf.prf  makefile.zb  pref-gcu.prf  pref-gtk.prf  pref-mac.prf  pref-tk-win.prf  pref-tk-x11.prf  pref.prf  user.prf
zangband/lib/save/: makefile.zb
zangband/lib/script/: Makefile.am  field.lua  idle.py  init.py  makefile.zb  object.lua  spell.lua  test.lua  variable.py  vars.py
zangband/lib/script/angband/: cave.py  commands.py  event.py  io.py  monster.py  objects.py  pclass.py  player.py  prace.py  random.py  realms.py  spells.py  store.py  system.py  terrain.py  util.py
zangband/lib/script/base/: action.py  birth.py  building.py  event.py  feature.py  level.py  monster.py  object.py  p_class.py  p_magic.py  p_race.py  p_sex.py  player.py  plugin.py  quest.py  realm.py  score.py  skill.py  spell.py  terrain.py  ui.py  utils.py  wild.py  world.py
zangband/lib/script/gui/: __init__.py
zangband/lib/script/python/: types.py
zangband/lib/script/startup/: gui.py  nexus.py  ui.py
zangband/lib/script/test/: c.py  level_example.py  s.py  test.py  test1.py
zangband/lib/script/tk/: init-startup.tcl  main-window.tcl  makefile.zb  moduleIndex.tcl  term.tcl
zangband/lib/script/tools/: convert.py  r_info.py  score.py
zangband/lib/script/ui/: __init__.py  list.py
zangband/lib/script/util/: autorun.py  debug.py  error.py  r_info.py  randname.py  sort.py  string.py
zangband/lib/user/: font-win.prf  font-x11.prf  font-xxx.prf  font.prf  graf-ibm.prf  graf-new.prf  graf-x11.prf  graf-xaw.prf  graf-xpj.prf  graf-xxx.prf  graf.prf  makefile.zb  pref-gtk.prf  pref-opt.prf  pref.prf  user.prf  zborg.txt
zangband/lib/xtra/: makefile.zb
zangband/lib/xtra/font/: 16x16.txt  makefile.zb  xm12x20b.fnt  xm16x25.fnt
zangband/lib/xtra/graf/: makefile.zb
zangband/lib/xtra/help/: makefile.zb
zangband/lib/xtra/music/: makefile.zb
zangband/lib/xtra/sound/: makefile.zb
zangband/src/: Makefile.cyg  ZAngband.r  ZAngband.xml  angband.h  angband.rc  anindent  anindent_all  anmerge  artifact.c  autoconf.h.in  avatar.c  bind.c  birth-tnb.c  birth.c  bldg.c  canv-widget.c  cave.c  cave.i  cave_wrap.c  cave_wrap.doc  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  cmdinfo-dll.c  cmdinfo-dll.h  commands.i  commands_wrap.c  commands_wrap.doc  compress.c  config.h  const.c  debug.c  defines.h  describe.c  dungeon.c  effects.c  event.h  (+233 more)
zangband/src/lua/: array.lua  class.lua  container.lua  define.lua  function.lua  lcode.c  liolib.c  llimits.h  lopcodes.h  lparser.c  makefile.am  makefile.zb  package.lua  tolua.c  tolua.h  tolua_eh.c  tolua_gp.c  tolua_lb.c  tolua_rg.c  tolua_rg.h  tolua_tm.c  tolua_tm.h  tolua_tt.c  tolua_tt.h  tolualua.c  variable.lua
zangband/src/tk/: bind.c  canv.c  cmdinfo.c  cmdinfo.h  const.c  describe.c  icon.c  icon.h  icon1.c  icon2.c  icon3.c  interp.c  interp1.c  interp2.c  makefile.zb  map.h  map1.c  map2.c  plat.c  plat.h  qebind.c  qebind.h  r_info.c  setting.c  struct.h  struct1.c  struct2.c  tcltk.c  term.c  tk-util.c  tnb.h  widget.c  widget.h  widget1.c  widget2.c  widget3.c
zangband/tk/: about.tcl  angband.tcl  assign.tcl  autobar.tcl  bgerror.tcl  birth-options.tcl  birth.tcl  book-menu.tcl  book-window.tcl  building.tcl  character-window.tcl  charflags-canvas.tcl  charinfo-canvas.tcl  choice-window.tcl  choose-game.tcl  color.tcl  config.tcl  debug-alloc.tcl  debug.tcl  display-info.tcl  errorInfo.tcl  font.tcl  help-html.tcl  highscore.tcl  init-other.tcl  init-startup.tcl  inventory.tcl  inventory2.tcl  keymap.tcl  knowledge.tcl  macros.tcl  main-window.tcl  map.tcl  message-window.tcl  mindcraft-menu.tcl  mindcraft-window.tcl  misc-popup.tcl  misc-window.tcl  misc.tcl  moduleIndex.tcl  (+17 more)
zangband/tk/config/: adam+feat-assign  adam-assign  adam-sprite  adamNN+feat.cfg  adamNN-common  adamNN.cfg  classic+feat-assign  classic-assign  classic-common  classicNN+feat.cfg  classicNN.cfg  config-char  config-flavor  config-map  dark  dg32+iso-postop  dg32+iso.cfg  dg32-assign  dg32.cfg  geometry  savefile  value
zangband/tk/doc/: about.html  options-index  variant-faq.txt
zangband/tk/msgs/birth/: en.msg
zangband/tk/msgs/book/: ja.msg
zangband/tk/msgs/charflags/: en.msg
zangband/tk/msgs/color/: en.msg  ja.msg
zangband/tk/msgs/common/: ja.msg
zangband/tk/msgs/font/: en.msg
zangband/tk/msgs/inven/: ja.msg
zangband/tk/msgs/keymap/: ja.msg
zangband/tk/msgs/know/: ja.msg
zangband/tk/msgs/macro/: ja.msg
zangband/tk/msgs/main/: en.msg  ja.msg
zangband/tk/msgs/message/: ja.msg
zangband/tk/vault/: vault-editor.tcl
(+413 files in other folders)
